--- a/log_collect/index.html
+++ b/log_collect/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--<script src="tracker.js"></script>-->
+    <script src="http://test01/tracker.js"></script>
     <script>
-        function guid() {
-            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
-                var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
-                return v.toString(16);
-            });
+        function btnSearch() {
+            var keyword = document.getElementById("kw").value;
+            window.__AE__.searchEvent(keyword);
         }
-        alert(guid())
+        function addCart() {
+            var pid = document.getElementById("img1").getAttribute("data-sn");
+            window.__AE__.addCartEvent(pid);
+        }
     </script>
 </head>
 <body>
-
+<input type="text" id="kw" style="width: 500px;"><input type="button" value="搜索" onclick="btnSearch()">
+<img src="1.jpg" style="width: 50%;height: 50%" data-sn="001" id="img1"><input type="button" value="加入购物车"onclick="addCart()">
 </body>
+</html>
 </html>
